--- a/metal/roles/openstack/bootstrap_host/vars/main.yml
+++ b/metal/roles/openstack/bootstrap_host/vars/main.yml
@@ -3,6 +3,8 @@
 # Ex. A value of 'kolla-venv' will become '/root/kolla-venv'
 kolla_venv: "{{ common.kolla_venv }}"
 
+cinder_standard_devices: "{{ ['/dev/vdc'] if ci_pipeline else storage.cinder.devices }}"
+
 # Desired names of your 'public' network and subnet.
 # These will be directly attached to your LAN.
 public_network_name: "{{ network.public_network_name }}"
