--- a/metal/roles/openstack/cinder/tasks/backends.yml
+++ b/metal/roles/openstack/cinder/tasks/backends.yml
@@ -1,12 +1,12 @@
 ---
-- name: 'Cinder : Create premium storage backend'
+- name: "Cinder : Create 'PREMIUM' storage backend"
   ansible.builtin.blockinfile:
     path: "/etc/kolla/{{ cinder_create }}/cinder.conf"
     block: |
       [lvm-2]
       volume_group = cinder-premium
       volume_driver = cinder.volume.drivers.lvm.LVMVolumeDriver
-      volume_backend_name = lvm-premium
+      volume_backend_name = lvm-2
       target_helper = lioadm
       target_protocol = iscsi
   loop:
@@ -17,12 +17,12 @@
     loop_var: cinder_create
   notify: restart_containers
 
-- name: 'Cinder : Enable the additonal backends'
+- name: "Cinder : Enable the additonal backend(s)"
   ansible.builtin.lineinfile:
     path: "/etc/kolla/{{ cinder_enable }}/cinder.conf"
     insertafter: '^\[DEFAULT\]'
     regexp: '^enabled_backends'
-    line: 'enabled_backends = lvm-1,lvm-2,lvm-3'
+    line: 'enabled_backends = lvm-1,lvm-2'
   loop:
     - cinder-api
     - cinder-scheduler
