--- a/metal/roles/openstack/nova/tasks/main.yml
+++ b/metal/roles/openstack/nova/tasks/main.yml
@@ -1,8 +1,25 @@
 ---
+- name: Disable local block devices
+  ansible.builtin.lineinfile:
+    path: "/etc/kolla/{{ nova_component }}/nova.conf"
+    insertafter: '^\[DEFAULT\]'
+    regexp: 'max_local_block_devices'
+    line: 'max_local_block_devices = 0'
+  loop: "{{ nova_conf_components }}"
+  loop_control:
+    loop_var: nova_component
+  notify: updated_nova_conf
+
 - name: Set Nova to resume guest state after host reboot
   ansible.builtin.lineinfile:
     path: /etc/kolla/nova-compute/nova.conf
     insertafter: '^\[DEFAULT\]'
     regexp: '^resume_guests_state_on_host_boot'
     line: 'resume_guests_state_on_host_boot = True'
-  notify: restart_nova_compute
+  loop: "{{ nova_conf_components }}"
+  loop_control:
+    loop_var: nova_component
+  notify: updated_nova_conf
+
+- name: Flush Handlers
+  ansible.builtin.meta: flush_handlers
