fix(metal): openstack deployment issues
Fixes a few lingering issues with the Ansible roles:

- Fix Kickstart LVM error caused by not using base 2 PE size (now 4096)
- Make sure to generate Swift rings if ring files aren't present
- Wait for Cinder API to come online after restarting containers

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/87

--- a/metal/roles/openstack/swift/tasks/main.yml
+++ b/metal/roles/openstack/swift/tasks/main.yml
@@ -24,5 +24,30 @@
     index_var: swift_device_index
   notify: generate_rings
 
+- name: Stat the ring files
+  ansible.builtin.stat:
+    path: "/etc/kolla/config/swift/{{ ring_file }}"
+  loop:
+    - account.builder
+    - account.ring.gz
+    - container.builder
+    - container.ring.gz
+    - object.builder
+    - object.ring.gz
+  loop_control:
+    loop_var: ring_file
+  register: ring_files
+
+- name: Assert that ring files are present
+  ansible.builtin.assert:
+    that: ring_file.stat.exists
+    quiet: true
+  changed_when: not ring_file.stat.exists
+  failed_when: false
+  loop: "{{ ring_files.results }}"
+  loop_control:
+    loop_var: ring_file
+  notify: generate_rings
+
 - name: Flush Handlers
   ansible.builtin.meta: flush_handlers
