--- a/metal/roles/openstack/cinder/handlers/main.yml
+++ b/metal/roles/openstack/cinder/handlers/main.yml
@@ -1,12 +1,4 @@
 ---
-- name: Restart the containers
-  community.docker.docker_container:
-    name: "{{ cinder_container }}"
-    restart: true
-  loop:
-    - cinder_api
-    - cinder_scheduler
-    - cinder_volume
-  loop_control:
-    loop_var: cinder_container
+- name: Include tasks
+  ansible.builtin.include_tasks: restart-containers.yml
   listen: restart_containers
