fix(metal): correct ordering of fqdn variables
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/88

--- a/metal/roles/rhel9/kickstart/vars/main.yml
+++ b/metal/roles/rhel9/kickstart/vars/main.yml
@@ -7,4 +7,4 @@ rocky_ip_address: "{{ kolla_internal_vip_address }}"
 rocky_subnet_mask: "{{ network.public_subnet_cidr | ansible.utils.ipaddr('netmask') }}"
 rocky_gateway_ip: "{{ network.public_subnet_gateway_ip }}"
 rocky_dns_servers: "{{ network.public_dns_servers }}"
-rocky_hostname: "{{ network.domain }}.{{ network.hostname }}"
+rocky_hostname: "{{ network.hostname }}.{{ network.domain }}"
