fix(prod): ensure required directories exist for first boot
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/93

--- a/infra/modules/openstack/fcos-mediasrv/modules/services/files/mosquitto.service
+++ b/infra/modules/openstack/fcos-mediasrv/modules/services/files/mosquitto.service
@@ -16,7 +16,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     --cidfile=%t/%n.ctr-id --cgroups=no-conmon --sdnotify=conmon \
     --label io.containers.autoupdate=registry \
     --name mosquitto \
-    -v /srv/mosquitto:/mosquitto:Z \
+    -v /srv/mosquitto:/mosquitto/config:Z \
     --network proxy \
     -p 1883:1883 \
     docker.io/eclipse-mosquitto:2.0
