refactor(fcos): improve backup/restore
This MR creates a proper CLI command, called `backupctl`, for managing backup/restore.

Also makes several other minor fixes/improvements to backup/restore, and the staging environment.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/95

--- a/infra/modules/openstack/fcos-mediasrv/modules/services/files/mosquitto.service
+++ b/infra/modules/openstack/fcos-mediasrv/modules/services/files/mosquitto.service
@@ -11,6 +11,8 @@ Restart=on-failure
 TimeoutStartSec=300
 TimeoutStopSec=70
 
+ExecStartPre=/bin/touch /srv/mosquitto/mosquitto.conf
+
 ExecStartPre=/bin/rm -f %t/%n.ctr-id
 ExecStart=/usr/bin/podman run -d --rm --replace \
     --cidfile=%t/%n.ctr-id --cgroups=no-conmon --sdnotify=conmon \
