--- a/infra/modules/openstack/fcos-mediasrv/modules/backups/files/restic.service
+++ b/infra/modules/openstack/fcos-mediasrv/modules/backups/files/restic.service
@@ -7,4 +7,4 @@ After=network-online.target packages.service
 Type=oneshot
 Restart=no
 
-ExecStart=/usr/local/bin/backup.sh
+ExecStart=/usr/local/bin/backupctl create
