fix(metal): swift s3token incorrect auth_uri
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/100

--- a/metal/10-deploy-openstack.yml
+++ b/metal/10-deploy-openstack.yml
@@ -15,6 +15,7 @@
     - openstack/bootstrap_host
     - openstack/swift
     - openstack/deploy_kolla
+    - openstack/fixes
     - openstack/defaults
     - openstack/nova
     - openstack/cinder
