--- a/metal/roles/openstack/octavia/handlers/main.yml
+++ b/metal/roles/openstack/octavia/handlers/main.yml
@@ -2,3 +2,9 @@
 - name: 'Octavia : Source user credentials'
   ansible.builtin.include_tasks: image.yml
   listen: octavia_image_build
+
+- name: "Restart the 'octavia_worker' container"
+  community.docker.docker_container:
+    name: octavia_worker
+    restart: true
+  listen: restart_octavia_worker
