--- a/cluster/platform/vault/generate-secrets.yaml
+++ b/cluster/platform/vault/generate-secrets.yaml
@@ -17,17 +17,6 @@ data:
           special: false
           uppercase: true
 
-    - path: mediasrv/nzbget
-      data:
-        - key: adminPassword
-          length: 32
-          special: false
-          uppercase: false
-        - key: apiPassword
-          length: 32
-          special: false
-          uppercase: false
-
     - path: mediasrv/prowlarr
       data:
         - key: apiKey
@@ -38,6 +27,17 @@ data:
     - path: mediasrv/radarr
       data:
         - key: apiKey
+          length: 32
+          special: false
+          uppercase: false
+
+    - path: mediasrv/sabnzbd
+      data:
+        - key: apiKey
+          length: 32
+          special: false
+          uppercase: false
+        - key: nzbKey
           length: 32
           special: false
           uppercase: false
