--- a/cluster/apps/media-server/radarr/secrets.yaml
+++ b/cluster/apps/media-server/radarr/secrets.yaml
@@ -19,7 +19,7 @@ spec:
       remoteRef:
         key: /mediasrv/radarr
         property: apiKey
-    - secretKey: nzbget-api-password
+    - secretKey: sabnzbd-api-password
       remoteRef:
-        key: /mediasrv/nzbget
-        property: apiPassword
+        key: /mediasrv/sabnzbd
+        property: apiKey
