--- a/cluster/apps/media-server/sabnzbd/kustomization.yaml
+++ b/cluster/apps/media-server/sabnzbd/kustomization.yaml
@@ -5,5 +5,6 @@ namespace: media-server
 resources:
   - configmap.yaml
   - secrets.yaml
+  - storage.yaml
   - ingress.yaml
-  - deployment.yaml
+  - statefulset.yaml
