--- a/cluster/apps/media-server/sabnzbd/statefulset.yaml
+++ b/cluster/apps/media-server/sabnzbd/statefulset.yaml
@@ -1,11 +1,11 @@
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: nzbget
+  name: sabnzbd
   namespace: media-server
   labels:
-    app.kubernetes.io/name: nzbget
+    app.kubernetes.io/name: sabnzbd
   annotations:
     ignore-check.kube-linter.io/no-read-only-root-fs: "Unsupported for this app."
     ignore-check.kube-linter.io/run-as-non-root: "Not possible for init job."
@@ -16,11 +16,11 @@ spec:
     type: Recreate
   selector:
     matchLabels:
-      app.kubernetes.io/name: nzbget
+      app.kubernetes.io/name: sabnzbd
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nzbget
+        app.kubernetes.io/name: sabnzbd
     spec:
       # serviceAccountName: default
       # automountServiceAccountToken: true
@@ -37,12 +37,10 @@ spec:
           image: "archlinux:base"
           imagePullPolicy: IfNotPresent
           volumeMounts:
-            - name: nzbget-config
+            - name: sabnzbd-config
               mountPath: /configmaps
-            - name: nzbget-data
+            - name: sabnzbd-data
               mountPath: /config
-            - name: nzbget-secrets
-              mountPath: /secrets
             - name: media
               mountPath: /media
           command: ["/configmaps/init.sh"]
@@ -56,48 +54,54 @@ spec:
               cpu: 125m
               memory: 250Mi
       containers:
-        - name: nzbget
-          image: "ghcr.io/ralgar/nzbget:21.1"
+        - name: sabnzbd
+          image: "ghcr.io/onedr0p/sabnzbd:4.2.3"
           imagePullPolicy: IfNotPresent
+          env:
+            - name: SABNZBD__API_KEY
+              valueFrom: { secretKeyRef: { name: sabnzbd-secrets, key: apiKey } }
+            - name: SABNZBD__NZB_KEY
+              valueFrom: { secretKeyRef: { name: sabnzbd-secrets, key: nzbKey } }
+            - name: SABNZBD__HOST_WHITELIST_ENTRIES
+              value: "sabnzbd.media-server.svc, sabnzbd.${DOMAIN}"
           ports:
-            - name: nzbget-http
-              containerPort: 6789
+            - name: sabnzbd-http
+              containerPort: 8080
               protocol: TCP
           volumeMounts:
-            - name: nzbget-data
+            - name: sabnzbd-data
               mountPath: /config
             - name: media
               mountPath: /media
           resources:
             limits:
               cpu: 2000m
-              memory: 500Mi
+              memory: 1000Mi
             requests:
               cpu: 500m
-              memory: 500Mi
-          # livenessProbe:
-          #   exec:
-          #     command:
-          #     - /usr/bin/env
-          #     - bash
-          #     - -c
-          #     - curl --fail localhost:7878/api/v3/system/status?apiKey=`IFS=\> && while read -d
-          #       \< E C; do if [[ $E = "ApiKey" ]]; then echo $C; fi; done < /config/config.xml`
-          #   failureThreshold: 5
-          #   initialDelaySeconds: 60
-          #   periodSeconds: 10
-          #   successThreshold: 1
-          #   timeoutSeconds: 10
+              memory: 1000Mi
+          livenessProbe:
+            exec:
+              command:
+                - /usr/bin/env
+                - bash
+                - -c
+                - curl --fail "localhost:8080/api?mode=status&apikey=$SABNZBD__API_KEY"
+            failureThreshold: 5
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 10
           readinessProbe:
             tcpSocket:
-              port: 6789
+              port: 8080
             initialDelaySeconds: 0
             failureThreshold: 3
             timeoutSeconds: 1
             periodSeconds: 10
           startupProbe:
             tcpSocket:
-              port: 6789
+              port: 8080
             initialDelaySeconds: 0
             failureThreshold: 30
             timeoutSeconds: 1
@@ -108,16 +112,13 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: false
       volumes:
-        - name: nzbget-config
+        - name: sabnzbd-config
           configMap:
-            name: nzbget-config
+            name: sabnzbd-config
             defaultMode: 0777
-        - name: nzbget-data
-          emptyDir:
-            sizeLimit: 1Mi
-        - name: nzbget-secrets
-          secret:
-            secretName: nzbget-secrets
+        - name: sabnzbd-data
+          persistentVolumeClaim:
+            claimName: sabnzbd-data
         - name: media
           persistentVolumeClaim:
             claimName: media
