fix(metal): workaround magnum regression
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/103

--- a/metal/roles/openstack/bootstrap_host/tasks/main.yml
+++ b/metal/roles/openstack/bootstrap_host/tasks/main.yml
@@ -10,6 +10,7 @@
     - storage.yml
     - files.yml
     - octavia.yml
+    - fixes.yml
 
 - name: Include CI Pipeline tasks
   ansible.builtin.include_tasks: ci-pipeline.yml
