fix(swift): add role and module
Key changes:

- fix(metal): create 'swiftmember' role
- feat(infra): add 'openstack/object-container' module

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/105

--- a/metal/roles/openstack/fixes/tasks/main.yml
+++ b/metal/roles/openstack/fixes/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
+- name: Set Python interpreter to Kolla venv
+  ansible.builtin.set_fact:
+    ansible_python_interpreter: "{{ kolla_venv }}/bin/python"
+
 - name: Include tasks
   ansible.builtin.include_tasks: swift.yml
