fix(docs): move mkdocs config file
- Move '.mkdocs.yml' to 'docs/mkdocs.yml'
- Move '.ci' directory to '.gitlab/templates'

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/106

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ variables:
   TF_VAR_gitops_repo: ${CI_PROJECT_URL}.git
 
 include:
-  - local: '/.ci/build-docs.yml'
+  - local: '/.gitlab/templates/build-docs.yml'
 
 terraform:init:
   stage: prepare
