ci(mkdocs): fix paths for build
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/107

--- a/.gitlab/templates/build-docs.yml
+++ b/.gitlab/templates/build-docs.yml
@@ -12,7 +12,8 @@ pages:
         - .ci/build-docs.yml
         - docs/**/*
   script:
-    - mkdocs build --config-file docs/mkdocs.yml --site-dir public
+    - cd docs
+    - mkdocs build --site-dir ../public
   artifacts:
     paths:
       - public
