refactor(*): k8s module and template
This MR moves K8s template creation out of the Terraform scripts, and into the 'metal' module (the cloud layer), where it is now created as a default, public resource. This was done as part of an effort to make the Terraform environments more dynamic and modular, allowing us to spawn multiple clusters while keeping the code clean and DRY.

Key changes:

- Migrate k8s template into 'metal' module
- Externalize the nested 'flux' module
- Add missing 'init' target to Makefile
- Remove the now defunct k8s-cluster module

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/111

--- a/metal/roles/openstack/defaults/tasks/main.yml
+++ b/metal/roles/openstack/defaults/tasks/main.yml
@@ -26,3 +26,6 @@
 - name: Include image tasks
   ansible.builtin.include_tasks: images.yml
   when: coreos_images.images | length == 0
+
+- name: Include COE template tasks
+  ansible.builtin.include_tasks: coe_templates.yml
