--- a/cluster/system/flux-sync/apps/smart-home.yaml
+++ b/cluster/system/flux-sync/apps/smart-home.yaml
@@ -11,6 +11,7 @@ spec:
     - name: ingress-nginx
     - name: trust-manager
     - name: vault
+    - name: volsync
   interval: 60m
   path: ./cluster/apps/smart-home
   prune: true
