fix(cluster): migrate Crunchy PGO to Helm installation
OperatorHub.io recently began requiring registration in order to pull operators. Rather than bend to their whim, we've simply removed all dependency on their products. This change removes the Operator Lifecycle Manager entirely, and migrates the Crunchy Postgres Operator over to its Helm release.

This fixes the Crunchy Postgres Operator deployment failure, and restores the cluster to an operational state.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/115

--- a/cluster/apps/media-server/kustomization.yaml
+++ b/cluster/apps/media-server/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: media-server
 resources:
   - namespace.yaml
+  - database.yaml
   - storage.yaml
   - jellyfin/
   - jellyseerr/
