--- a/cluster/system/flux-sync/apps/smart-home.yaml
+++ b/cluster/system/flux-sync/apps/smart-home.yaml
@@ -9,6 +9,7 @@ spec:
     - name: csi-cinder
     - name: external-secrets
     - name: ingress-nginx
+    - name: postgres
     - name: trust-manager
     - name: vault
     - name: volsync
