refactor(metal): use pre-built image for Amphora
This change refactors the Octavia components of the metal module. We're now using one of the pre-built Amphora images provided by the OpenStack project for testing purposes. This greatly simplifies/quickens the Amphora image creation process, and works around a recent, upstream regression when building from source on Rocky Linux 9.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/117

--- a/metal/roles/openstack/bootstrap_host/handlers/main.yml
+++ b/metal/roles/openstack/bootstrap_host/handlers/main.yml
@@ -13,4 +13,4 @@
   ansible.builtin.shell: |
     source {{ kolla_venv }}/bin/activate
     kolla-ansible octavia-certificates
-  listen: octavia
+  listen: octavia_certificates
