--- a/cluster/system/flux-sync/platform/kustomization.yaml
+++ b/cluster/system/flux-sync/platform/kustomization.yaml
@@ -5,5 +5,5 @@ namespace: flux-system
 resources:
   - 389ds.yaml
   - external-secrets.yaml
-  - postgres.yaml
+  - postgres-operator.yaml
   - vault.yaml
