--- a/cluster/system/flux-sync/apps/databases.yaml
+++ b/cluster/system/flux-sync/apps/databases.yaml
@@ -2,19 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: smart-home
+  name: databases
   namespace: flux-system
 spec:
   dependsOn:
-    - name: csi-cinder
-    - name: databases
-    - name: external-secrets
-    - name: ingress-nginx
-    - name: trust-manager
-    - name: vault
-    - name: volsync
+    - name: postgres-operator
   interval: 60m
-  path: ./cluster/apps/smart-home
+  path: ./cluster/apps/databases
   prune: true
   wait: true
   sourceRef:
@@ -22,7 +16,6 @@ spec:
     name: flux-system
   postBuild:
     substitute:
-      DOMAIN: ${DOMAIN}
       GCP_BACKUP_PROJECT_ID: ${GCP_BACKUP_PROJECT_ID}
       GCP_BACKUP_BUCKET_NAME: ${GCP_BACKUP_BUCKET_NAME}
       GCP_BACKUP_BUCKET_CREDS: ${GCP_BACKUP_BUCKET_CREDS}
