--- a/cluster/system/flux-sync/platform/postgres-operator.yaml
+++ b/cluster/system/flux-sync/platform/postgres-operator.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: postgres
+  name: postgres-operator
   namespace: flux-system
 spec:
   dependsOn:
     - name: csi-cinder
   interval: 60m
-  path: ./cluster/platform/postgres
+  path: ./cluster/platform/postgres-operator
   prune: true
   wait: true
   sourceRef:
