refactor(metal): encapsulate storage configuration
A small change to encapsulate storage configuration code in it's own role.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/120

--- a/metal/10-deploy-openstack.yml
+++ b/metal/10-deploy-openstack.yml
@@ -13,7 +13,7 @@
   roles:
     - common/wait_for_connection
     - openstack/bootstrap_host
-    - openstack/swift
+    - openstack/configure_storage
     - openstack/deploy_kolla
     - openstack/fixes
     - openstack/defaults
