--- a/metal/roles/openstack/configure_storage/tasks/cinder.yml
+++ b/metal/roles/openstack/configure_storage/tasks/cinder.yml
@@ -19,3 +19,19 @@
   loop: "{{ lvm_pvs.results }}"
   loop_control:
     loop_var: lvm_pv
+
+- name: Create the 'cinder-premium' LVM physical volume (for CI pipeline)
+  community.general.parted:
+    device: /dev/vdb
+    number: 1
+    flags: [ lvm ]
+    state: present
+    part_end: 100%
+  when: ci_pipeline == "true"
+
+- name: Create the 'cinder-premium' LVM volume group (for CI pipeline)
+  community.general.lvg:
+    vg: cinder-premium
+    pvs: /dev/vdb1
+    pesize: 16M
+  when: ci_pipeline == "true"
