feat(metal): deploy Manila service
This change implements a fully-functional deployment of the Manila service, with one small caveat for now - we've had to temporarily allow local storage, so that Manila can successfully spawn an instance.

Closes #28

Opens #29

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/121

--- a/metal/10-deploy-openstack.yml
+++ b/metal/10-deploy-openstack.yml
@@ -19,5 +19,6 @@
     - openstack/defaults
     - openstack/nova
     - openstack/cinder
+    - openstack/manila
     - openstack/designate
     - openstack/octavia
