--- a/metal/vars/globals.yml
+++ b/metal/vars/globals.yml
@@ -382,8 +382,8 @@ neutron_dns_domain: "homelab.internal."
 #enable_kuryr: "no"
 enable_magnum: "yes"
 enable_cluster_user_trust: "true"
-#enable_manila: "no"
-#enable_manila_backend_generic: "no"
+enable_manila: "yes"
+enable_manila_backend_generic: "yes"
 #enable_manila_backend_hnas: "no"
 #enable_manila_backend_cephfs_native: "no"
 #enable_manila_backend_cephfs_nfs: "no"
